Work around getLogicalModemUuid()='' glitch
Use phone number as UUID

Change-Id: I33f69a5753d152d1f13ec0af1a41a04b98ca43f2